Thu Mar 19 17:03:48 1998  Martin Mares  <mj@lomikel.karlin.mff.cuni.cz>

	* lspci.c (grow_tree, show_tree_dev, print_it): Fixed displaying
	of PCI-to-PCI bridges in the tree format.

Sun Feb 15 10:12:25 1998  Martin Mares  <mj@albireo.ucw.cz>

	* lspci.c (show_machine): Added non-verbose mode of machine-readable
	dump.

	* pci.ids: Updates from Jens Maurer.

	* Released as version 1.02.

Thu Feb 12 16:53:28 1998  Martin Mares  <mj@lomikel.karlin.mff.cuni.cz>

	* lspci.c: Added a "-m" switch for dumping machine-readable
	configuration data (requested by Bjoern Kriews <bkr@cut.de>).

Mon Feb  9 13:17:43 1998  Martin Mares  <mj@albireo.ucw.cz>

	* Makefile, pciutils.h: Include local pci.h instead of <linux/pci.h>
	if available. This should avoid all problems with official kernel
	not synchronized to newer PCI code in CVS -- standard distribution
	of pciutils now contains pci.h from current CVS kernel, pciutils
	in CVS contain no pci.h and use the correct kernel include.

	* Makefile: Fixed installation path for man pages.

Sat Feb  7 15:15:46 1998  Martin Mares  <mj@albireo.ucw.cz>

	* README: Updated.

	* lspci.8: Created a man page.

	* Releasing as version 1.0.

Tue Feb  3 20:56:00 1998  Martin Mares  <mj@albireo.ucw.cz>

	* Makefile: Recognize architecture by calling uname and pass it as ARCH_xxx
	to all the C sources. This should eliminate problems with 32-bit compilers
	on sparc64.

	* lspci.c (show_verbose): Recognize CardBus bridge header type.
	(show_htype2): Stub routine.
	(scan_config): Write sensible error message if the kernel denies reading of
	upper part of the PCI config space.
