@@ -22,11 +22,12 @@ the manual page (lspci.8) for more details.
 Release notes about new versions will be send to the list and problems with
 the Linux PCI support will be probably discussed there, too.
 
+   You also might want to look at the pciutils web page containing release
+notes and other news: http://atrey.karlin.mff.cuni.cz/~mj/pciutils.html.
+
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 TODO:
-
-	- Work-around the PIIX4 ACPI crash?
 
 	- Better displaying of IRQ's generated by both PCI and CardBus bridges.
 
