@@ -10,6 +10,6 @@ Keywords:       kernel, pci, proc, lspci
 Author:         mj@atrey.karlin.mff.cuni.cz (Martin Mares)
 Maintained-by:  mj@atrey.karlin.mff.cuni.cz (Martin Mares)
 Primary-site:   atrey.karlin.mff.cuni.cz pub/local/mj/linux/pciutils-1.02.tar.gz
-Alternate-site: sunsite.unc.edu pub/Linux/system/hardware/pciutils-1.02.tar.gz
+Alternate-site: sunsite.unc.edu pub/Linux/hardware/pciutils-1.02.tar.gz
 Copying-policy: GPL
 End
